--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
+  <title>The Aviator: Claudia Andrea Rojas Márquez</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <script type="text/javascript" src="js/three.js"></script>
   <script type="text/javascript" src="js/index.js"/></script>
